--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -22,7 +22,8 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npm run build
+        run: CI='' npm run build
+
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.0.0
