--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
+# dependencies
+/node_modules
+
+# production
+/build
+
+# misc
 .env
-.node_modules
+.DS_Store
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDEs
+.vscode
+.idea
+
+# OS files
+Thumbs.db
